# cz-conventional-jira

./: LICENSE  README.md  pyproject.toml
src/cz_conventional_jira/: __init__.py  cz_conventional_jira.py
tests/: test_cz_conventional_jira.py
