[project]
name = "cz-conventional-jira"
description = "Commitizen ruleset extending Conventional Commits with JIRA issue links"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "commitizen (>=4.8.3)"
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest (>=8)",
]

[project.entry-points."commitizen.plugin"]
cz_conventional_jira = "cz_conventional_jira:CzConventionalJira"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
version = "0.0.0" # placeholder

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
dirty = true
